crates/daemon/src/snapshots/daemon__tests__daemon_publication_and_cleanup_failure.snap
---
source: crates/daemon/src/lib.rs
expression: marker
---
Object {
    "kind": String("startup_failed"),
    "message": String("runtime record is incomplete or invalid: <tempdir>/home/.pv/run/daemon-process.json; additionally failed to clean up runtime `daemon startup` transaction: I/O error: server cleanup failed"),
}
